# education_repo

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  linux.yaml  release.yaml  upload.yaml
my_tests/: test_hello.cpp
src/: BUILD  CMakeLists.txt  IpFilter.cpp  allocator.h  dummy_command.h  dummy_command_processor.h  duplicate_finder.h  file_writer.h  hello.cpp  hello.h  list.h  main.cpp  mask_filesystem_traverser.h  matrix.h  tests.cpp
src/application/: application.h
src/document/: document.h  file_io.h
src/interfaces/: command.h  processor.h  reader.h  storage.h  writer.h
src/render/: renderable.h
src/shape/: circle.h  rectangle.h  segment.h  shape.h
src/utils/: color.h  point.h
